examples/test/testpolicy2595.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2595
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key23: value8
      key45: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value15
      podSelector:
        matchLabels:
          key11: value35
          key21: value49
